--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <title>Alurageek</title>
   </head>
-  <body class="bg-slate-300 text-zinc-950">
+  <body class="bg-slate-300 text-zinc-950" role="main">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
